crates/rmcp-openapi/src/snapshots/rmcp_openapi__tool_generator__tests__array_parameter_examples_lift.snap
---
source: crates/rmcp-openapi/src/tool_generator.rs
expression: result
---
{
  "type": "array",
  "items": {
    "type": "string",
    "description": "A relationship path: a dot-separated chain of relationship names."
  },
  "description": "Relationship paths to include.",
  "examples": [
    [
      "camera"
    ],
    [
      "mesh.primitives.material"
    ],
    [
      "mesh.primitives.indices"
    ]
  ]
}
