crates/rmcp-openapi/src/snapshots/rmcp_openapi__tool_generator__tests__test_array_with_prefix_items_integration.snap
---
source: crates/rmcp-openapi/src/tool_generator.rs
expression: result
---
{
  "type": "array",
  "minItems": 2,
  "maxItems": 2,
  "items": {
    "type": "number"
  },
  "description": "X,Y coordinates as tuple"
}
