crates/rmcp-openapi/src/snapshots/rmcp_openapi__tool_generator__tests__test_array_with_regular_items_schema.snap
---
source: src/tool_generator.rs
expression: result
---
{
  "description": "List of tags",
  "items": {
    "maxLength": 50,
    "minLength": 1,
    "type": "string"
  },
  "type": "array"
}
