crates/rmcp-openapi/src/snapshots/rmcp_openapi__tool_generator__tests__test_convert_prefix_items_to_draft07_mixed_types.snap
---
source: crates/rmcp-openapi/src/tool_generator.rs
expression: result
---
{
  "minItems": 2,
  "maxItems": 2,
  "items": {
    "oneOf": [
      {
        "type": "integer"
      },
      {
        "type": "string"
      }
    ]
  }
}
