crates/rmcp-openapi/src/snapshots/rmcp_openapi__tool_generator__tests__test_keep_tool_description.snap
---
source: crates/rmcp-openapi/src/tool_generator.rs
expression: metadata
---
{
  "name": "getPetById",
  "title": "Find pet by ID",
  "description": "Find pet by ID\n\nReturns a single pet\n\nEndpoint: GET /pet/{petId}",
  "parameters": {
    "type": "object",
    "properties": {},
    "required": [],
    "additionalProperties": false
  },
  "output_schema": null,
  "method": "get",
  "path": "/pet/{petId}"
}
